--- a/exercicios1/questao2.html
+++ b/exercicios1/questao2.html
@@ -7,27 +7,27 @@
 </head>
 <style>
     .pq {
-       background-color:                 rgb(201, 31, 96);
+       background-color:                 rgb(255, 0, 0);
        width: 300px;
        height: 50px;
     }
     .sq {
-        background-color: rgb(251, 255, 0); 
+        background-color: orange; 
         width: 300px;
         height: 50px;
     }
     .tq {
-        background-color: rgb(23, 119, 209);
+        background-color: yellow;
         width: 300px;
         height: 50px;
     } 
     .qq {
-        background-color: pink;
+        background-color: green;
         width: 300px;
         height: 50px;
     }
     .cq {
-        background-color: rgb(218, 74, 122);
+        background-color: blue;
         width: 300px;
         height: 50px;
     }
